@@ -1,3 +1,14 @@
+Sun Apr 27 11:03:36 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_yacc_lex_cxx): ._c and ._o files both depend
+	on $(ANSI2KNR).
+
+	* kr-extra.am (ansi2knr): Removed.
+	(ansi2knr.o): Likewise.
+
+	* automake.in (get_object_extension): Allow ansi2knr to be built
+	from any directory.
+
 Fri Apr 25 12:33:23 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* missing: Changed bison text.  From Ian Taylor.
